--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,35 +1,167 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AutaMAUI.MainPage">
+             x:Class="AutaMAUI.MainPage"
+             BackgroundColor="#E8F5E9">
 
     <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
+        <VerticalStackLayout HorizontalOptions="FillAndExpand"
+            Padding="10">
             <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+                Source="szary.png"
+                HeightRequest="150"
+                Aspect="AspectFit"/>
 
             <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
+                Text="Konfigurator wyposażenia"
+                FontSize="25"
+                TextColor="White"
+                FontAttributes="Bold"
+                BackgroundColor="#1B5E20"
+                Padding="5"
+                HorizontalOptions="CenterAndExpand"
+                />
             <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+                Text="Wybierz kolor lakieru"
+                FontSize="18"
+                TextColor="#5D9B5D"
+                FontAttributes="Bold"
+                Margin="5"
+                HorizontalOptions="CenterAndExpand"               
+                />
+            <Picker 
+                x:Name="pckColor"
+                HorizontalOptions="CenterAndExpand"
+                BackgroundColor="#E1F1E1"
+                SelectedIndexChanged="handleChange"
+                >
+                <Picker.ItemsSource>
+                    <x:Array Type="{x:Type x:String}">
+                        <x:String>Szary</x:String>
+                        <x:String>Czerwony</x:String>
+                        <x:String>Zielony</x:String>
+                        <x:String>Żółty</x:String>
+                        <x:String>Granatowy</x:String>
+                    </x:Array>
+                </Picker.ItemsSource>
+            </Picker>
+            <Label
+                Text="Wybierz kolor lakieru"
+                FontSize="18"
+                TextColor="#5D9B5D"
+                FontAttributes="Bold"
+                Margin="5"
+                HorizontalOptions="CenterAndExpand"               
+                />
+            <BoxView MinimumHeightRequest="1"
+                BackgroundColor="DimGray"
+                HorizontalOptions="FillAndExpand"
+                />
+            <Label
+                Text="Felgi"
+                TextColor="#1B5E20"
+                HorizontalOptions="CenterAndExpand"
+                />
+            <HorizontalStackLayout HorizontalOptions="CenterAndExpand" BackgroundColor="#9AEB9A">
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+                <RadioButton
+                    Content="Stalowe"
+                    GroupName="FelgiGroup"
+                    HorizontalOptions="StartAndExpand"
+                    IsChecked="True"
+                    CheckedChanged="handleChange"
+                />
+                <RadioButton
+                    Content="Aluminiowe"
+                    GroupName="FelgiGroup"
+                    HorizontalOptions="EndAndExpand"
+                    CheckedChanged="handleChange"
+                    />
+             </HorizontalStackLayout>
+                <Label
+                    TextColor="Black"
+                    Text="Wybierz dodatkowe wyposażenie"
+                    HorizontalOptions="CenterAndExpand"
+                />
+            <HorizontalStackLayout HorizontalOptions="StartAndExpand">
+                <CheckBox
+                VerticalOptions="CenterAndExpand"
+                    x:Name="chkParking"
+                    HorizontalOptions="StartAndExpand"
+                    CheckedChanged="handleChange"
+                    />
+                <Label
+                    VerticalOptions="CenterAndExpand"
+                    TextColor="Black"
+                    Text="Czujnik parkowania"
+                    HorizontalOptions="StartAndExpand"/>
+                </HorizontalStackLayout>
+            <HorizontalStackLayout HorizontalOptions="StartAndExpand">
+                <CheckBox
+                    x:Name="chkClima"
+                    VerticalOptions="CenterAndExpand"
+                    HorizontalOptions="StartAndExpand"
+                    CheckedChanged="handleChange"
+                />
+                <Label
+                    TextColor="Black"
+                    VerticalOptions="CenterAndExpand"
+                    Text="Czujnik parkowania"
+                    HorizontalOptions="StartAndExpand"/>
+            </HorizontalStackLayout>
+            <HorizontalStackLayout HorizontalOptions="StartAndExpand">
+                <CheckBox
+                    x:Name="chkNav"
+                    VerticalOptions="CenterAndExpand"
+                    HorizontalOptions="StartAndExpand"
+                    CheckedChanged="handleChange"
+                />
+                <Label
+                    TextColor="Black"
+                    VerticalOptions="CenterAndExpand"
+                    Text="Czujnik parkowania"
+                    HorizontalOptions="StartAndExpand"/>
+            </HorizontalStackLayout>
+
+            <BoxView MinimumHeightRequest="1"
+                    BackgroundColor="DimGray"
+                    HorizontalOptions="FillAndExpand"
+                />
+            
+            <Label
+                TextColor="#1B5E20"
+                Text="Wycena"
+                HorizontalOptions="CenterAndExpand"/>
+            <Label
+                x:Name="lblBase"
+                Text="Cena bazowa: 75000"
+                FontSize="18"
+                TextColor="Black"
+                HorizontalOptions="EndAndExpand"/>
+            <Label
+                x:Name="lblColor"
+                Text=""
+                FontSize="18"
+                TextColor="Black"
+                HorizontalOptions="EndAndExpand"/>
+            <Label
+                x:Name="lblFelgs"
+                Text=" "
+                FontSize="18"
+                TextColor="Black"
+                HorizontalOptions="EndAndExpand"/>
+            <Label
+                x:Name="lblClima    "
+                Text=" "
+                FontSize="18"
+                TextColor="Black"
+                HorizontalOptions="EndAndExpand"/>
+            <Label
+                x:Name="lblOverall"
+                Text="Razem: 75000"
+                FontSize="18"
+                TextColor="Black"
+                HorizontalOptions="EndAndExpand"/>
         </VerticalStackLayout>
     </ScrollView>
 
